<resources>
    <string name="app_name">OrgaEDU</string>
    <string name="hello_world">Hello World!</string>
    <string name="hello_user">Hola, usuario</string>
    <string name="empty_string">A</string>

    <string name="user_avatar_description">Avatar del usuario</string>

    <string name="back_button_description">Botón de volver</string>
    <string name="register_title">Registro</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_select_role">Selecciona un rol</string>
    <string name="button_register">Registrarse</string>
    <string name="facebook_icon_description">Icono de Facebook</string>
    <string name="instagram_icon_description">Icono de Instagram</string>
    <string name="google_icon_description">Icono de Google</string>

    <string name="logo_description">Logo de la aplicación</string>
    <string name="app_educational_title">App Educativa</string>
    <string name="welcome_title">Bienvenido</string>
    <string name="login_instructions">Por favor inicia sesión con tu información</string>
    <string name="label_username">Usuario</string>
    <string name="label_password">Contraseña</string>
    <string name="remember_me">Recordar</string>
    <string name="forgot_password">Olvide mi contraseña</string>
    <string name="button_access">Acceder</string>
    <string name="no_account_register">¿No tienes cuenta? Regístrate</string>

    <string name="task_management_title">Gestión de Tareas</string>
    <string name="task_title_hint">Título de la tarea</string>
    <string name="task_description_hint">Descripción de la tarea (opcional)</string>
    <string name="add_task_button_text">Añadir Tarea</string>
    <string name="my_tasks_title">Mis Tareas:</string>
    <string name="navigation_drawer_open">Abrir cajón de navegación</string>
    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>

    <string name="nav_inicio_title">Inicio</string>
    <string name="nav_areas_title">Áreas</string>
    <string name="nav_asistencia_title">Asistencia</string>
    <string name="nav_tareas_title">Tareas</string>

    <!-- Textos para InicioFragment -->
    <string name="hello_admin">Hola, administrador</string>

    <string name="title_mision">Misión</string>
    <string name="text_mision">Formar profesionales competentes, éticos y comprometidos con la sociedad, promoviendo una educación integral basada en la excelencia académica, la innovación y la responsabilidad social.</string>

    <string name="title_vision">Visión</string>
    <string name="text_vision">Ser una universidad reconocida a nivel nacional e internacional por su calidad educativa, liderazgo en investigación y su contribución al desarrollo sostenible de la sociedad.</string>

    <!-- String plantilla con formato y parámetros -->
    <string name="mision_vision"><![CDATA[
        <b>%1$s:</b><br/>%2$s<br/><br/>
        <b>%3$s:</b><br/>%4$s
    ]]></string>
</resources>