<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin">

    <View
        android:id="@+id/overlay_morado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_header_height"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            android:src="@drawable/logoescuelalisto"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_educational_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_app_title"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/card_margin_bottom"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textColor="@color/my_primary"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_instructions" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/label_username"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_usuario_wrapper"
                    android:inputType="text"
                    android:minHeight="@dimen/min_height_input_field"
                    android:paddingStart="@dimen/padding_start_input_field"
                    android:paddingEnd="@dimen/padding_start_input_field" /> </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/label_password"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/min_height_input_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/remember_me" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_login"
                android:text="@string/button_access"
                app:cornerRadius="@dimen/button_corner_radius_login" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_small" />

            <TextView
                android:id="@+id/goToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_account_register"
                android:textColor="?attr/colorPrimary"
                android:layout_marginTop="@dimen/margin_top_register_link" />

            <LinearLayout
                android:id="@+id/socialicons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/social_icon_size"
                    android:layout_height="@dimen/social_icon_size"
                    android:layout_margin="@dimen/margin_social_icon"
                    android:src="@drawable/facebook"
                    android:contentDescription="@string/facebook_icon_description" />

                <ImageView
                    android:layout_width="@dimen/social_icon_size"
                    android:layout_height="@dimen/social_icon_size"
                    android:layout_margin="@dimen/margin_social_icon"
                    android:src="@drawable/instagram"
                    android:contentDescription="@string/instagram_icon_description" />

                <ImageView
                    android:layout_width="@dimen/social_icon_size"
                    android:layout_height="@dimen/social_icon_size"
                    android:layout_margin="@dimen/margin_social_icon"
                    android:src="@drawable/google"
                    android:contentDescription="@string/google_icon_description" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>