<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerfondo">
    <ImageButton
        android:id="@+id/btnVolver"
        android:layout_width="@dimen/button_icon_size"
        android:layout_height="@dimen/button_icon_size"
        android:layout_margin="@dimen/margin_medium"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_background"
        android:padding="-30dp"
        android:scaleType="centerInside"
        android:src="@drawable/volver"
        android:contentDescription="@string/back_button_description" />

    <TextView
        android:id="@+id/registrarNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_top_register_fields"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:hint="@string/hint_full_name"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:hint="@string/hint_username"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:hint="@string/hint_email"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roleDropdownLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:hint="@string/hint_select_role"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_roles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/hint_select_role"  android:importantForAccessibility="no"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrar"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_button_top"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:backgroundTint="@color/button_blue"
            android:text="@string/button_register"
            app:cornerRadius="@dimen/corner_radius_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/redessociales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_margin="@dimen/margin_social_icon"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook_icon_description" />

        <ImageView
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_margin="@dimen/margin_social_icon"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram_icon_description" />

        <ImageView
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_margin="@dimen/margin_social_icon"
            android:src="@drawable/google"
            android:contentDescription="@string/google_icon_description" />
    </LinearLayout>

</RelativeLayout>